--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,8 +1,8 @@
-port 1883
+listener 1883
 log_type error
 log_type notice
-log_type information
-log_type debug
+#log_type information
+#log_type debug
 #allow_anonymous false
 #password_file /etc/mosquitto/pass.txt
 #Extra Listeners
